--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.8",
     "cors": "^2.8.5",
+    "framer-motion": "^11.13.1",
     "lucide-react": "^0.464.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
